# BasicOfProgrammingCourse1

course1/: CMakeLists.txt  main.c
course1/libs/: CMakeLists.txt
course1/libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
course1/libs/algorithms/array/: array.c  array.h
course1/libs/base/: CMakeLists.txt  base.c  base.h
course1/libs/data_structures/: CMakeLists.txt
course1/libs/data_structures/bitset/: bitset.c  bitset.h
course1/libs/data_structures/matrix/: matrix.c  matrix.h
course1/libs/data_structures/vector/: main.c  vector.c  vector.h  vectorVoid.c  vectorVoid.h
course1/libs/string/: string.c  string.h  testString.c  testString.h
