add_library(algorithms algorithm.c array/array.c
        ../base/base.c
        ../base/base.h
        ../data_structures/vector/vector.c
        ../data_structures/vector/vector.h
        ../data_structures/vector/vector.h
        ../data_structures/vector/vector.h
        ../data_structures/vector/vectorVoid.c)
