
add_library(base base.c base/base.c
        ../data_structures/matrix/matrix.c
        ../data_structures/matrix/matrix.h
        ../data_structures/vector/main.c
        ../string/string.c
        ../string/string.h
        ../string/string.c
        ../string/string.c
        ../string/testString.c
        ../string/testString.h)
